circt-bc260128-00000857/origin/reproduce.log
=== Step 1: circt-verilog ===
circt-verilog exit code: 0
module {
  hw.module @M(in %enable : i1, in %data_in : i8, out data_out : i1) {
    %0 = sim.fmt.literal "Error: Assertion failed: q != 0"
    %true = hw.constant true
    %1 = comb.extract %data_in from 0 : (i8) -> i1
    %2 = comb.and %enable, %1 : i1
    llhd.combinational {
      %3 = comb.xor %1, %true : i1
      cf.cond_br %3, ^bb2, ^bb1
    ^bb1:  // pred: ^bb0
      sim.proc.print %0
      cf.br ^bb2
    ^bb2:  // 2 preds: ^bb0, ^bb1
      llhd.yield
    }
    hw.output %2 : i1
  }
}

=== Step 2: arcilator ===
arcilator exit code: 1
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: Assertion failed: q != 0"
         ^
<stdin>:3:10: note: see current operation: %12 = "sim.fmt.literal"() <{literal = "Error: Assertion failed: q != 0"}> : () -> !sim.fstring

=== Step 3: opt ===
opt exit code: 1
/opt/firtool/bin/opt: <stdin>:1:1: error: expected top-level entity
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
^

=== Step 4: llc ===
llc exit code: 1
